feat: Add video recording module for modular codebase
- Create video-recorder.js module with VideoRecorder class
- Add recordVideo() API with customizable options (duration, fps, bitrate, rotations)
- Integrate VideoRecorder into main.js and upload.js
- Add record button to index.html with proper styling
- Update API.md documentation with VideoRecorder section
- Add callback mechanism to enable record button after card creation
- Create comprehensive test suite (test-video-recording.html)
- Support VP9/VP8 codecs with automatic detection
- Implement smooth EaseInOut animation for rotation
- Add pulse animation for recording state indicator

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <div class="controls">
                     <button class="control-btn" id="autoRotateBtn">自动旋转</button>
                     <button class="control-btn" id="manualRotateBtn">手动控制</button>
+                    <button class="record-btn" id="recordButton" disabled>🎬 生成视频</button>
                 </div>
             </div>
         </div>
@@ -78,6 +79,7 @@
         <div class="instructions">
             <p>💡 使用说明：上传正面和背面图片，点击"创建3D卡片"按钮生成3D卡片模型。卡片会像真实卡片一样翻转，使用控制按钮切换自动翻转或手动控制模式！</p>
             <p>🖱️ 交互控制：鼠标移动控制卡片翻转，滚轮缩放控制远近（距离范围：2-20）</p>
+            <p>🎬 视频录制：创建卡片后，点击"生成视频"按钮录制3D卡片旋转一圈的视频（约5秒，60 FPS，自动下载为 WebM 格式）</p>
         </div>
     </div>
 
